--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
+							<h2>Pluriverso</h2>
+							<p>Pluriverso Educación es una empresa de soluciones educativas <br>con un portafolio de acompañamiento a familias e instituciones, que busca<br> fortalecer los procesos formativos de los niños y jóvenes del Siglo XXI, cuya característica principal es la diversidad de estilos y ritmos de aprendizaje.y <a href="http://html5up.net">HTML5 UP</a>.</p>
 							<ul class="actions special">
 								<li><a href="#" class="button primary">Activate</a></li>
 							</ul>
