--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Pluriverso</h2>
-							<p>Pluriverso Educación es una empresa de soluciones educativas <br>con un portafolio de acompañamiento a familias e instituciones, que busca<br> fortalecer los procesos formativos de los niños y jóvenes del Siglo XXI, cuya característica principal es la diversidad de estilos y ritmos de aprendizaje.y <a href="http://html5up.net">HTML5 UP</a>.</p>
+							<p>Pluriverso Educación es una empresa de soluciones educativas <br>con un portafolio de acompañamiento a familias e instituciones, que busca<br> fortalecer los procesos formativos de los niños y jóvenes del Siglo XXI, cuya característica principal es la diversidad de estilos y ritmos de aprendizaje.y <a href="https://www.youtube.com/watch?v=w7z1oWltxqQ">HTML5 UP</a>.</p>
 							<ul class="actions special">
 								<li><a href="#" class="button primary">Activate</a></li>
 							</ul>
